Fixed overflow when too many extesions are displayed vertically

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-  min-width:250px;
+  min-width:270px;
   margin-top: 1px;
   margin-bottom: 20px;
-  overflow-x:auto;
-  overflow-y:hidden;
+  overflow-x:hidden;
+  overflow-y:auto;
 }
 
 .extension-item {
